# trading-analytics

./: .gitignore  LICENSE
backend/: alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0646e0c66c35_add_model_user.py  72d1dfcc3d5f_update_user_model.py
backend/config/: settings.py
backend/core/: dependencies.py
backend/database/: engine.py  model.py  session.py
backend/domains/: base.py  user.py
backend/domains/value_objects/: email.py  password.py
backend/models/: common.py
backend/repositories/: base.py  user.py
backend/schemas/: user.py
backend/services/: user.py
trading-analytics-app/: README.md  package-lock.json  package.json
